test/invalid_confs/invalid_type.lua
--ERROR: wrong type of echo
Listen "8080" {
	echo = 100,
}
